<?xml version="1.0"?>
<package format="3">
  <name>tank_interface</name>
  <version>0.0.1</version>
  <description>Package for custom tank interface messages</description>
  <maintainer email="sanjaykumar.nsk5@gmail.com">nsk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
